Closed Bug 621271 Opened 15 years ago Closed 15 years ago

nsIPresShell.h causes very many warnings on Windows whose system locale is non-Western

Categories

(Core :: Layout, defect)

x86
Windows 7
defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla2.0b10

People

(Reporter: masayuki, Assigned: msucan)

Details

Attachments

(1 file)

> warning C4819: The file contains a character that cannot be represented in the current code page (932). Save the file in Unicode format to prevent data loss The cause is that there is a non-ASCII character in the license block. > 25 * Mihai Șucan <mihai.sucan@gmail.com> Mihai, cannot you use only ASCII character for your name? nsIPresShell is included by very very many files. Therefore, the waring is printed very many times when I rebuild my tree. Note that on Windows, console messages are displayed synchronously, therefore, painting the message causes slower.
Summary: nsIPresShell.h causes very many warnings on Windows which system locale isn't non-Western → nsIPresShell.h causes very many warnings on Windows which system locale is non-Western
Attached patch name changeSplinter Review
Ouch. Sorry about that. Attaching a patch which changes my name to use only ASCII chars.
Can't we just tell the compiler that our files are UTF-8?
(In reply to comment #2) > Can't we just tell the compiler that our files are UTF-8? VC++ 2005 requires BOM if source code is detected as UTF-8.
... and in case anyone is considering adding BOMs to source files, note that they confuse mxr
According to comment 2 and comment 3, we have no way to use UTF-8. I hope the patch will be landed soon. dbaron, do you still have objection?
Assignee: nobody → mihai.sucan
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b10
Summary: nsIPresShell.h causes very many warnings on Windows which system locale is non-Western → nsIPresShell.h causes very many warnings on Windows whose system locale is non-Western
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: