Bug 621271 remove non-ASCII character from comment of nsIPressShell.h and nsPresShell.cpp r=masayuki, a=comment-only